k8s_envelope/dasmlab-home_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dasmlab-home
  namespace: dasmlab-home-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dasmlab-home
  template:
    metadata:
      labels:
        app: dasmlab-home
    spec:
      containers:
        - name: dasmlab-home
          image: ghcr.io/lmcdasm/dasmlab-home:__VERSION__
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: dasmlab-home
  namespace: dasmlab-home-system
  annotations:
    metallb.universe.tf/ip-allocated-from-pool: bgp-pool
spec:
  selector:
    app: dasmlab-home
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.19.100
  ports:
    - name: http
      port: 8111        # External LB port
      targetPort: http  # Matches named container port (80)
      protocol: TCP
